--- a/src/nikoniko.yml
+++ b/src/nikoniko.yml
@@ -6,21 +6,21 @@ sections:
   -
     type: desc
     text: |
-      L'équipe affiche, sur un mur visible de tous, un [calendrier](http://www.geocities.jp/nikonikocalendar/pics_en/jirei.JPG) de type journalier. A la fin de chaque journée de travail les membres de l'équipe indiquent par un dessin ou en collant des gommettes de couleur leur évaluation subjective de cette journée.
+      L'Ã©quipe affiche, sur un mur visible de tous, un [calendrier](http://www.geocities.jp/nikonikocalendar/pics_en/jirei.JPG) de type journalier. A la fin de chaque journÃ©e de travail les membres de l'Ã©quipe indiquent par un dessin ou en collant des gommettes de couleur leur Ã©valuation subjective de cette journÃ©e.
   -
     type: syno
     text: |
-      Le terme "feeling board" est également utilisé. C'est un [radiateur d'information](radiator.html).
-      Le terme est d'origine japonaise, le redoublement indiquant un effet d'onomatopée, "niko" signifie "sourire".
+      Le terme "feeling board" est Ã©galement utilisÃ©. C'est un [radiateur d'information](radiator.html).
+      Le terme est d'origine japonaise, le redoublement indiquant un effet d'onomatopÃ©e, "niko" signifie "sourire".
   -
     type: histo
     text: |
-      * proposé par Akinori Sakata dans [cet article](http://www.geocities.jp/nikonikocalendar/index_en.html) début 2006
+      * proposÃ© par Akinori Sakata dans [cet article](http://www.geocities.jp/nikonikocalendar/index_en.html) dÃ©but 2006
   -
     type: benefices
     text: |
-      L'intérêt de la pratique est d'objectiver un élément, la motivation ou le bien-être de l'équipe, habituellement subjectif et difficile à mesurer.
-      C'est une excellente illustration du "Principe de Gilb": "Si vous avez besoin de quantifier quelque chose, il existe toujours une manière de le faire qui soit préférable à ne pas le quantifier du tout." En d'autres termes, il n'est pas nécessaire qu'une mesure soit parfaite ou très précise, dès lors que votre objectif est de rendre quantifiable quelque chose qui ne l'est pas encore: l'essentiel est de commencer.
+      L'intÃ©rÃªt de la pratique est d'objectiver un Ã©lÃ©ment, la motivation ou le bien-Ãªtre de l'Ã©quipe, habituellement subjectif et difficile Ã  mesurer.
+      C'est une excellente illustration du "Principe de Gilb": "Si vous avez besoin de quantifier quelque chose, il existe toujours une maniÃ¨re de le faire qui soit prÃ©fÃ©rable Ã  ne pas le quantifier du tout." En d'autres termes, il n'est pas nÃ©cessaire qu'une mesure soit parfaite ou trÃ¨s prÃ©cise, dÃ¨s lors que votre objectif est de rendre quantifiable quelque chose qui ne l'est pas encore: l'essentiel est de commencer.
   -
     type: resources
     text: |
