--- a/src/sustainable.yml
+++ b/src/sustainable.yml
@@ -6,14 +6,14 @@ sections:
   -
     type: desc
     text: |
-      L'équipe vise un rythme de travail tel qu'il pourrait être soutenu indéfiniment.
-      Ceci implique en général de refuser ce qui est parfois considéré comme un "mal nécessaire": heures supplémentaires, travail le week-end.
+      L'Ã©quipe vise un rythme de travail tel qu'il pourrait Ãªtre soutenu indÃ©finiment.
+      Ceci implique en gÃ©nÃ©ral de refuser ce qui est parfois considÃ©rÃ© comme un "mal nÃ©cessaire": heures supplÃ©mentaires, travail le week-end.
   -
     type: syno
     text: |
-      Le terme anglais originel était "40 hour week" soit "semaine de 40 heures". On lui a préféré "sustainable pace", terme plus général.
+      Le terme anglais originel Ã©tait "40 hour week" soit "semaine de 40 heures". On lui a prÃ©fÃ©rÃ© "sustainable pace", terme plus gÃ©nÃ©ral.
   -
     type: benefices
     text: |
-      L'approche Agile considère que le recours autre qu'exceptionnel à des mesures telles que les heures supplémentaires est rarement productif, et contribue en fait à *masquer* des défauts de planification, de management ou de qualité interne. Il est préférable de mettre au jour ces défauts et d'en traiter la cause profonde plutôt que de leur appliquer un traitement symptômatique.
+      L'approche Agile considÃ¨re que le recours autre qu'exceptionnel Ã  des mesures telles que les heures supplÃ©mentaires est rarement productif, et contribue en fait Ã  *masquer* des dÃ©fauts de planification, de management ou de qualitÃ© interne. Il est prÃ©fÃ©rable de mettre au jour ces dÃ©fauts et d'en traiter la cause profonde plutÃ´t que de leur appliquer un traitement symptÃ´matique.
 ---
