--- a/src/troisquestions.yml
+++ b/src/troisquestions.yml
@@ -6,17 +6,17 @@ sections:
   -
     type: desc
     text: |
-      Les [réunions quotidiennes](daily.html) sont structurées autour des trois questions suivantes:
+      Les [rÃ©unions quotidiennes](daily.html) sont structurÃ©es autour des trois questions suivantes:
 
-      * Qu'as-tu terminé depuis la précédente réunion?
-      * Que penses-tu pouvoir terminer d'ici la prochaine réunion?
+      * Qu'as-tu terminÃ© depuis la prÃ©cÃ©dente rÃ©union?
+      * Que penses-tu pouvoir terminer d'ici la prochaine rÃ©union?
       * Quels obstacles rencontres-tu en ce moment?
   -
     type: abus
     text: |
-      * il est important d'insister sur le mot "terminé" dans ces questions; une erreur courante consiste à répondre: "hier j'ai travaillé sur le schéma de la base de données... et je continue là-dessus aujourd'hui... sinon tout va bien"; dans ce cas-là il vaut mieux dire "je n'ai rien terminé de nouveau"; cf. la [définition de 'terminé'](sashimi.html)
+      * il est important d'insister sur le mot "terminÃ©" dans ces questions; une erreur courante consiste Ã  rÃ©pondre: "hier j'ai travaillÃ© sur le schÃ©ma de la base de donnÃ©es... et je continue lÃ -dessus aujourd'hui... sinon tout va bien"; dans ce cas-lÃ  il vaut mieux dire "je n'ai rien terminÃ© de nouveau"; cf. la [dÃ©finition de 'terminÃ©'](sashimi.html)
   -
     type: histo
     text: |
-      Ces trois questions sont à l'origine une spécificité des réunions Scrum, désormais adoptée par presque toutes les équipes Agiles
+      Ces trois questions sont Ã  l'origine une spÃ©cificitÃ© des rÃ©unions Scrum, dÃ©sormais adoptÃ©e par presque toutes les Ã©quipes Agiles
 ---
