--- a/src/acceptance.yml
+++ b/src/acceptance.yml
@@ -1,53 +1,53 @@
 ---
-title: Tests fonctionnels automatisés
+title: Tests fonctionnels automatisÃ©s
 type: Pratique
 full: yes
 sections:
   -
     type: desc
     text: |
-      Un test fonctionnel, au sens Agile, est une description formelle du comportement d'un produit, généralement exprimée sous la forme d'un exemple ou d'un scénario.
-      Des formalismes très divers existent pour l'expression de ces exemples ou scénarios, mais on cherche le plus souvent à ce qu'il soit possible d'en automatiser le déroulement à l'aide d'un outil (interne à l'équipe de développement, ou disponible "sur étagère").
-      Comme pour un [test unitaire](unittest.html) son résultat est binaire, un "échec" (comportement différend de celui attendu) laissant présumer la présence d'un bug.
-      De tels tests tiennent lieu, pour une équipe Agile, de cahier des charges principal: il arrive qu'ils complètent et précisent un cahier des charges rédigé selon une technique non spécifiquement Agile ("use cases", ou encore document narratif); et dans certains cas qu'ils constituent l'unique expression formelle des exigences.
+      Un test fonctionnel, au sens Agile, est une description formelle du comportement d'un produit, gÃ©nÃ©ralement exprimÃ©e sous la forme d'un exemple ou d'un scÃ©nario.
+      Des formalismes trÃ¨s divers existent pour l'expression de ces exemples ou scÃ©narios, mais on cherche le plus souvent Ã  ce qu'il soit possible d'en automatiser le dÃ©roulement Ã  l'aide d'un outil (interne Ã  l'Ã©quipe de dÃ©veloppement, ou disponible "sur Ã©tagÃ¨re").
+      Comme pour un [test unitaire](unittest.html) son rÃ©sultat est binaire, un "Ã©chec" (comportement diffÃ©rend de celui attendu) laissant prÃ©sumer la prÃ©sence d'un bug.
+      De tels tests tiennent lieu, pour une Ã©quipe Agile, de cahier des charges principal: il arrive qu'ils complÃ¨tent et prÃ©cisent un cahier des charges rÃ©digÃ© selon une technique non spÃ©cifiquement Agile ("use cases", ou encore document narratif); et dans certains cas qu'ils constituent l'unique expression formelle des exigences.
   -
     type: syno
     text: |
-      On parle également de "tests de recette", plus rarement de "tests client" (par opposition à "tests développeur"). La traduction littérale "tests d'acceptation" est aussi utilisée (de l'anglais "acceptance test").
-      Le terme anglais "Storytest" (le plus souvent en un seul mot) est parfois utilisé, dans l'expression "storytest driven development" par exemple.
+      On parle Ã©galement de "tests de recette", plus rarement de "tests client" (par opposition Ã  "tests dÃ©veloppeur"). La traduction littÃ©rale "tests d'acceptation" est aussi utilisÃ©e (de l'anglais "acceptance test").
+      Le terme anglais "Storytest" (le plus souvent en un seul mot) est parfois utilisÃ©, dans l'expression "storytest driven development" par exemple.
   -
     type: abus
     text: |
-      * un travers courant consiste à exprimer les tests fonctionnels dans un formalisme trop proche de l'implémentation, ce qui les rend inintelligibles par les clients, utilisateurs ou experts métiers qui en sont l'audience privilégiée; on rencontre souvent ce défaut lorsque ce sont les développeurs qui prennent l'initiative de mettre en place cette pratique, il est donc **impératif de faire participer client, utilisateur ou expert métier** à cette activité
-      * une autre conséquence de ce type de dérive est de rendre les tests fonctionnels "fragiles", c'est à dire qu'ils échouent suite à des modifications de comportement qui sont sans rapport avec la fonctionnalité testée (par exemple la modification de l'étiquette d'un champ de texte)
+      * un travers courant consiste Ã  exprimer les tests fonctionnels dans un formalisme trop proche de l'implÃ©mentation, ce qui les rend inintelligibles par les clients, utilisateurs ou experts mÃ©tiers qui en sont l'audience privilÃ©giÃ©e; on rencontre souvent ce dÃ©faut lorsque ce sont les dÃ©veloppeurs qui prennent l'initiative de mettre en place cette pratique, il est donc **impÃ©ratif de faire participer client, utilisateur ou expert mÃ©tier** Ã  cette activitÃ©
+      * une autre consÃ©quence de ce type de dÃ©rive est de rendre les tests fonctionnels "fragiles", c'est Ã  dire qu'ils Ã©chouent suite Ã  des modifications de comportement qui sont sans rapport avec la fonctionnalitÃ© testÃ©e (par exemple la modification de l'Ã©tiquette d'un champ de texte)
   -
     type: histo
     text: |
-      * la pratique est intégrée dans Extreme Programming dès ses débuts, mais sans être liée à un outil ou un formalisme particulier; sa description recouvre sous une même étiquette tests unitaires et de recette (1996)
-      * Ward Cunningham, l'un des créateurs d'Extreme Programming, publie l'outil Fit pour formaliser les tests de recette (2002)
-      * l'adoption de Fit reste marginale pendant quelque temps, mais explose lorsque Bob Martin fusionne Fit avec une autre création de Cunningham, le Wiki, donnant naissance à FitNesse (2003)
-      * pendant quelque temps, le duo Fit/FitNesse éclipse les autres outils et s'impose en modèle pour la mise en oeuvre de tests fonctionnels Agiles
-      * plus récemment de [nouveaux outils liés à l'approche BDD](http://en.wikipedia.org/wiki/Behavior_Driven_Development#Tools) ont contribué à réouvrir le débat
+      * la pratique est intÃ©grÃ©e dans Extreme Programming dÃ¨s ses dÃ©buts, mais sans Ãªtre liÃ©e Ã  un outil ou un formalisme particulier; sa description recouvre sous une mÃªme Ã©tiquette tests unitaires et de recette (1996)
+      * Ward Cunningham, l'un des crÃ©ateurs d'Extreme Programming, publie l'outil Fit pour formaliser les tests de recette (2002)
+      * l'adoption de Fit reste marginale pendant quelque temps, mais explose lorsque Bob Martin fusionne Fit avec une autre crÃ©ation de Cunningham, le Wiki, donnant naissance Ã  FitNesse (2003)
+      * pendant quelque temps, le duo Fit/FitNesse Ã©clipse les autres outils et s'impose en modÃ¨le pour la mise en oeuvre de tests fonctionnels Agiles
+      * plus rÃ©cemment de [nouveaux outils liÃ©s Ã  l'approche BDD](http://en.wikipedia.org/wiki/Behavior_Driven_Development#Tools) ont contribuÃ© Ã  rÃ©ouvrir le dÃ©bat
   -
     type: benefices
     text: |
-      L'utilisation de tests fonctionnels automatisés apporte plusieurs bénéfices, complémentaires de ceux liés aux [tests unitaires](unittest.html):
+      L'utilisation de tests fonctionnels automatisÃ©s apporte plusieurs bÃ©nÃ©fices, complÃ©mentaires de ceux liÃ©s aux [tests unitaires](unittest.html):
 
-      * ils encouragent à une collaboration étroite entre les développeurs d'une part et les clients, utilisateurs ou experts métier d'autre part, puisqu'ils imposent de préciser suffisamment les exigences pour être en mesure de les exprimer dans un formalisme exécutable
-      * ils fournissent par la même occasion un "contrat" clair et précis pour l'acceptation par le client du travail fourni par les développeurs; si le produit passe les tests fonctionnels, il est considéré adéquat (mais les clients ou utilisateurs ont la possibilité d'affiner les tests ou d'en proposer de nouveaux si nécessaire)
-      * ils contribuent également à limiter le nombre de défauts et notamment de régressions (défauts apparus sur des fonctionnalités précédemment validées)
+      * ils encouragent Ã  une collaboration Ã©troite entre les dÃ©veloppeurs d'une part et les clients, utilisateurs ou experts mÃ©tier d'autre part, puisqu'ils imposent de prÃ©ciser suffisamment les exigences pour Ãªtre en mesure de les exprimer dans un formalisme exÃ©cutable
+      * ils fournissent par la mÃªme occasion un "contrat" clair et prÃ©cis pour l'acceptation par le client du travail fourni par les dÃ©veloppeurs; si le produit passe les tests fonctionnels, il est considÃ©rÃ© adÃ©quat (mais les clients ou utilisateurs ont la possibilitÃ© d'affiner les tests ou d'en proposer de nouveaux si nÃ©cessaire)
+      * ils contribuent Ã©galement Ã  limiter le nombre de dÃ©fauts et notamment de rÃ©gressions (dÃ©fauts apparus sur des fonctionnalitÃ©s prÃ©cÃ©demment validÃ©es)
   -
     type: cost
     text: |
-      Les tests fonctionnels, contrairement aux tests unitaires, font l'objet d'une controverse au sein de la communauté Agile, certains experts tels que Jim Shore ou Brian Marick jugeant que les bénéfices obtenus ne justifiaient pas les coûts à consentir:
+      Les tests fonctionnels, contrairement aux tests unitaires, font l'objet d'une controverse au sein de la communautÃ© Agile, certains experts tels que Jim Shore ou Brian Marick jugeant que les bÃ©nÃ©fices obtenus ne justifiaient pas les coÃ»ts Ã  consentir:
 
-      * beaucoup d'équipes Agiles constatent que l'écriture de tests fonctionnels automatisé représente un effort important
-      * pour des raisons liées aux erreurs de mise en oeuvre évoquées ci-dessus, la maintenance de ces tests peut également s'avérer contraignante et coûteuse
-      * la première génération d'outils, inspirée de Fit/Fitnesse, a souvent conduit à des tests fonctionnels qui n'étaient pas acceptés comme intelligibles par les clients, utilisateurs ou experts métier
+      * beaucoup d'Ã©quipes Agiles constatent que l'Ã©criture de tests fonctionnels automatisÃ© reprÃ©sente un effort important
+      * pour des raisons liÃ©es aux erreurs de mise en oeuvre Ã©voquÃ©es ci-dessus, la maintenance de ces tests peut Ã©galement s'avÃ©rer contraignante et coÃ»teuse
+      * la premiÃ¨re gÃ©nÃ©ration d'outils, inspirÃ©e de Fit/Fitnesse, a souvent conduit Ã  des tests fonctionnels qui n'Ã©taient pas acceptÃ©s comme intelligibles par les clients, utilisateurs ou experts mÃ©tier
 
-      Cependant, les évolutions récentes notamment celles dûes au [BDD](bdd.html) peuvent être de nature à améliorer ce rapport coût-bénéfice.
+      Cependant, les Ã©volutions rÃ©centes notamment celles dÃ»es au [BDD](bdd.html) peuvent Ãªtre de nature Ã  amÃ©liorer ce rapport coÃ»t-bÃ©nÃ©fice.
   -
     type: pubs
     text: |
-        * [Automated Acceptance Testing: A Literature Review and an Industrial Case Study](http://www.computer.org/portal/web/csdl/doi/10.1109/Agile.2008.82), passe en revue les articles sur le sujet et rapporte une étude de cas globalement positive
+        * [Automated Acceptance Testing: A Literature Review and an Industrial Case Study](http://www.computer.org/portal/web/csdl/doi/10.1109/Agile.2008.82), passe en revue les articles sur le sujet et rapporte une Ã©tude de cas globalement positive
 ---
