--- a/src/binomage.yml
+++ b/src/binomage.yml
@@ -1,63 +1,63 @@
 ---
-title: Programmation en binômes
-type: Compétence
+title: Programmation en binÃ´mes
+type: CompÃ©tence
 full: yes
 sections:
   -
     type: desc
     text: |
-      Deux programmeurs partagent un seul poste de travail (écran, clavier, souris), se répartissant les rôles entre un "conducteur" (aux commandes) et un "copilote" (surveillant l'écran et intervenant en cas de besoin), intervertissant les rôles fréquemment.
+      Deux programmeurs partagent un seul poste de travail (Ã©cran, clavier, souris), se rÃ©partissant les rÃ´les entre un "conducteur" (aux commandes) et un "copilote" (surveillant l'Ã©cran et intervenant en cas de besoin), intervertissant les rÃ´les frÃ©quemment.
   -
     type: syno
     text: |
-      De l'anglais "pair programming", ou programmation (ou développement) par paires, on parle aussi de binômage.
-      Donne les verbes: binômer, "pairer" (fréquent au Québec).
+      De l'anglais "pair programming", ou programmation (ou dÃ©veloppement) par paires, on parle aussi de binÃ´mage.
+      Donne les verbes: binÃ´mer, "pairer" (frÃ©quent au QuÃ©bec).
   -
     type: abus
     text: |
-      * les deux programmeurs doivent être actifs et impliqués tout au long de la session, sinon, aucun bénéfice ne peut en être attendu
-      * un calcul simpliste assimile le binômage à un doublement des coûts; les études mettent en évidence qu'il n'en est rien, lorsqu'il est pratiqué correctement, mais dans le cas limite où un seul programmeur travaille réellement, c'est bien le risque encouru
-      * on doit entendre parler le conducteur; binômer c'est aussi "programmer à haute voix", s'il est silencieux le copilote doit intervenir
-      * imposer le binômage ne peut en aucun cas s'avérer fructueux dans une situation où les aspects relationnels, y compris les plus concrets (hygiène personnelle, etc.) présentent un obstacle
+      * les deux programmeurs doivent Ãªtre actifs et impliquÃ©s tout au long de la session, sinon, aucun bÃ©nÃ©fice ne peut en Ãªtre attendu
+      * un calcul simpliste assimile le binÃ´mage Ã  un doublement des coÃ»ts; les Ã©tudes mettent en Ã©vidence qu'il n'en est rien, lorsqu'il est pratiquÃ© correctement, mais dans le cas limite oÃ¹ un seul programmeur travaille rÃ©ellement, c'est bien le risque encouru
+      * on doit entendre parler le conducteur; binÃ´mer c'est aussi "programmer Ã  haute voix", s'il est silencieux le copilote doit intervenir
+      * imposer le binÃ´mage ne peut en aucun cas s'avÃ©rer fructueux dans une situation oÃ¹ les aspects relationnels, y compris les plus concrets (hygiÃ¨ne personnelle, etc.) prÃ©sentent un obstacle
   -
     type: histo
     text: |
       * longue tradition en milieux universitaires, militaires...
-      * suggérée par Larry Constantine (Constantine on Peopleware) sous le nom "Dynamic Duo" (1995)
-      * simultanément décrite dans les "Organizational Patterns" de Jim Coplien (1995)
-      * pratique Extreme Programming dès ses débuts (1996)
-      * la variante "ping pong" (cf. ci-dessous) est décrite en 2003
+      * suggÃ©rÃ©e par Larry Constantine (Constantine on Peopleware) sous le nom "Dynamic Duo" (1995)
+      * simultanÃ©ment dÃ©crite dans les "Organizational Patterns" de Jim Coplien (1995)
+      * pratique Extreme Programming dÃ¨s ses dÃ©buts (1996)
+      * la variante "ping pong" (cf. ci-dessous) est dÃ©crite en 2003
   -
     type: progression
     text: |
-      L'un des principaux écueils à la pratique du binômage est la passivité. Lorsqu'on l'utilise conjointement avec le [développement par les tests](tdd.html), une variante appelée "ping pong programming" favorise l'échange de rôles: l'un des deux programmeurs écrit un test unitaire qui échoue, puis passe le clavier à son collègue qui cherche alors à faire passer ce test, et peut alors à son tour écrire un test. Cette variante peut être utilisée soit pour des raisons pédagogiques, soit dans un esprit plus ludique par des programmeurs déjà confirmés.
+      L'un des principaux Ã©cueils Ã  la pratique du binÃ´mage est la passivitÃ©. Lorsqu'on l'utilise conjointement avec le [dÃ©veloppement par les tests](tdd.html), une variante appelÃ©e "ping pong programming" favorise l'Ã©change de rÃ´les: l'un des deux programmeurs Ã©crit un test unitaire qui Ã©choue, puis passe le clavier Ã  son collÃ¨gue qui cherche alors Ã  faire passer ce test, et peut alors Ã  son tour Ã©crire un test. Cette variante peut Ãªtre utilisÃ©e soit pour des raisons pÃ©dagogiques, soit dans un esprit plus ludique par des programmeurs dÃ©jÃ  confirmÃ©s.
 
-      * Débutant
-        * je suis capable de participer en tant que copilote et intervenir à bon escient
-        * je suis capable de participer en tant que conducteur, en particulier d'expliquer à tout moment le code que j'écris
-      * Intermédiaire
-        * je reconnais le bon moment pour abandonner le clavier et changer de rôle
-        * je reconnais le bon moment pour "voler" le clavier et changer de rôle
-      * Avancé
-        * je suis capable de m'insérer dans le rôle de copilote en cours de développement d'une tâche commencée par un autre
+      * DÃ©butant
+        * je suis capable de participer en tant que copilote et intervenir Ã  bon escient
+        * je suis capable de participer en tant que conducteur, en particulier d'expliquer Ã  tout moment le code que j'Ã©cris
+      * IntermÃ©diaire
+        * je reconnais le bon moment pour abandonner le clavier et changer de rÃ´le
+        * je reconnais le bon moment pour "voler" le clavier et changer de rÃ´le
+      * AvancÃ©
+        * je suis capable de m'insÃ©rer dans le rÃ´le de copilote en cours de dÃ©veloppement d'une tÃ¢che commencÃ©e par un autre
   -
     type: signes
     text: |
-      * l'agencement du mobilier dans la pièce et des postes de travail sont adaptés au binômage (on peut reconnaître une équipe novice à tout aménagement qui rend le binômage inconfortable, par exemple trop peu de place pour deux sièges)
-      * l'ambiance sonore est maîtrisée: les conversations de N binômes simultanées crééent un murmure perceptible mais qui ne perturbe pas le travail
-      * si vous pouvez voir des programmeurs portant un casque audio en entrant dans la pièce, c'est un signe *négatif* suggérant non seulement l'absence de binômage mais également de conditions défavorables à son adoption
+      * l'agencement du mobilier dans la piÃ¨ce et des postes de travail sont adaptÃ©s au binÃ´mage (on peut reconnaÃ®tre une Ã©quipe novice Ã  tout amÃ©nagement qui rend le binÃ´mage inconfortable, par exemple trop peu de place pour deux siÃ¨ges)
+      * l'ambiance sonore est maÃ®trisÃ©e: les conversations de N binÃ´mes simultanÃ©es crÃ©Ã©ent un murmure perceptible mais qui ne perturbe pas le travail
+      * si vous pouvez voir des programmeurs portant un casque audio en entrant dans la piÃ¨ce, c'est un signe *nÃ©gatif* suggÃ©rant non seulement l'absence de binÃ´mage mais Ã©galement de conditions dÃ©favorables Ã  son adoption
   -
     type: benefices
     text: |
-      * une plus grande qualité des développements; "programmer à haute voix" conduit à mieux appréhender les complexités et les détails pernicieux, limitant ainsi le risque d'erreurs ou de se fourvoyer
-      * une meilleure diffusion des connaissances dans l'équipe, notamment lorsqu'un développeur peu familier d'un module travaille avec un autre qui le connait mieux
-      * une amélioration plus rapide des compétences des développeurs juniors, au contact de leurs aînés
-      * une rédution de l'effort de coordination, puisqu'au lieu de N développeurs on est amené à coordonner N/2 binômes
-      * une meilleure capacité à rester concentrer et résister aux interruptions: lorsqu'un des deux membres du binôme doit s'interrompre, l'autre peut rester focalisé sur la tâche et aider son collègue à se reconcentrer ensuite
+      * une plus grande qualitÃ© des dÃ©veloppements; "programmer Ã  haute voix" conduit Ã  mieux apprÃ©hender les complexitÃ©s et les dÃ©tails pernicieux, limitant ainsi le risque d'erreurs ou de se fourvoyer
+      * une meilleure diffusion des connaissances dans l'Ã©quipe, notamment lorsqu'un dÃ©veloppeur peu familier d'un module travaille avec un autre qui le connait mieux
+      * une amÃ©lioration plus rapide des compÃ©tences des dÃ©veloppeurs juniors, au contact de leurs aÃ®nÃ©s
+      * une rÃ©dution de l'effort de coordination, puisqu'au lieu de N dÃ©veloppeurs on est amenÃ© Ã  coordonner N/2 binÃ´mes
+      * une meilleure capacitÃ© Ã  rester concentrer et rÃ©sister aux interruptions: lorsqu'un des deux membres du binÃ´me doit s'interrompre, l'autre peut rester focalisÃ© sur la tÃ¢che et aider son collÃ¨gue Ã  se reconcentrer ensuite
   -
     type: cost
     text: |
-      Sans que ce soit confirmé de façon probante par des études empiriques, on estime que dans le cas idéal, la programmation en binômes se traduit par un surcoût de 15% par rapport à la situation où chaque développeur travaille séparément, surcoût qui serait facilement compensé par l'amélioration de la qualité, puisqu'une mauvaise qualité se traduit par une pénalité de maintenance tout au long du projet.
+      Sans que ce soit confirmÃ© de faÃ§on probante par des Ã©tudes empiriques, on estime que dans le cas idÃ©al, la programmation en binÃ´mes se traduit par un surcoÃ»t de 15% par rapport Ã  la situation oÃ¹ chaque dÃ©veloppeur travaille sÃ©parÃ©ment, surcoÃ»t qui serait facilement compensÃ© par l'amÃ©lioration de la qualitÃ©, puisqu'une mauvaise qualitÃ© se traduit par une pÃ©nalitÃ© de maintenance tout au long du projet.
   -
     type: resources
     text: |
@@ -65,11 +65,11 @@ sections:
   -
     type: pubs
     text: |
-      * Théoriques
-        * Les travaux théoriques les plus intéressants sont ceux qui poursuivent l'approche ethnographique initiée entre autres par Sallyann Freudenberg (née Bryant), en examinant "à la loupe" des interactions entre programmeurs dans leur milieu habituel
-        * [How Pair Programming Really Works](http://www.scribd.com/doc/25304465/null) cite certains de ces travaux assez représentatifs de la tendance récente à remettre en question le modèle "conducteur/copilote"
+      * ThÃ©oriques
+        * Les travaux thÃ©oriques les plus intÃ©ressants sont ceux qui poursuivent l'approche ethnographique initiÃ©e entre autres par Sallyann Freudenberg (nÃ©e Bryant), en examinant "Ã  la loupe" des interactions entre programmeurs dans leur milieu habituel
+        * [How Pair Programming Really Works](http://www.scribd.com/doc/25304465/null) cite certains de ces travaux assez reprÃ©sentatifs de la tendance rÃ©cente Ã  remettre en question le modÃ¨le "conducteur/copilote"
       * Empiriques
-        * [The Collaborative Software Process](http://collaboration.csc.ncsu.edu/laurie/Papers/dissertation.pdf), thèse doctorale de Laurie Williams, la plus connue des études à ce sujet, rapportant les conclusions initiales suivantes: amélioration de la qualité, pas de surcoût constaté de façon statistiquement significative
-        * [The effectiveness of pair programming: A meta-analysis](http://www.idi.ntnu.no/grupper/su/publ/ebse/R11-pairprog-hannay-ist09.pdf), une méta-analyse recensant et regroupant les 18 principales études empiriques connues à ce jour, conclusions: le binômage améliore la qualité et permet de réduire les délais de développement, mais conduit à une augmentation du coût (i.e. en termes de charge); la réduction du délai concerne surtout les tâches les plus simples confiées à des juniors et peut s'accompagner d'une réduction de la qualité.
-        * La plupart des études empiriques (14 sur les 18 analysées dans la référence ci-dessus) souffrent d'un défaut qui entâche leurs conclusions; elles sont menées sur des populations d'étudiants plutôt que sur des professionnels dans des conditions réelles d'exercice.
+        * [The Collaborative Software Process](http://collaboration.csc.ncsu.edu/laurie/Papers/dissertation.pdf), thÃ¨se doctorale de Laurie Williams, la plus connue des Ã©tudes Ã  ce sujet, rapportant les conclusions initiales suivantes: amÃ©lioration de la qualitÃ©, pas de surcoÃ»t constatÃ© de faÃ§on statistiquement significative
+        * [The effectiveness of pair programming: A meta-analysis](http://www.idi.ntnu.no/grupper/su/publ/ebse/R11-pairprog-hannay-ist09.pdf), une mÃ©ta-analyse recensant et regroupant les 18 principales Ã©tudes empiriques connues Ã  ce jour, conclusions: le binÃ´mage amÃ©liore la qualitÃ© et permet de rÃ©duire les dÃ©lais de dÃ©veloppement, mais conduit Ã  une augmentation du coÃ»t (i.e. en termes de charge); la rÃ©duction du dÃ©lai concerne surtout les tÃ¢ches les plus simples confiÃ©es Ã  des juniors et peut s'accompagner d'une rÃ©duction de la qualitÃ©.
+        * La plupart des Ã©tudes empiriques (14 sur les 18 analysÃ©es dans la rÃ©fÃ©rence ci-dessus) souffrent d'un dÃ©faut qui entÃ¢che leurs conclusions; elles sont menÃ©es sur des populations d'Ã©tudiants plutÃ´t que sur des professionnels dans des conditions rÃ©elles d'exercice.
 ---
