--- a/src/charter.yml
+++ b/src/charter.yml
@@ -6,8 +6,8 @@ sections:
   -
     type: desc
     text: |
-      L'équipe résume, dans un document très court, idéalement susceptible d'être affiché aux murs de [l'espace de travail](teamroom.html) au format d'une feuille de "paperboard", les enjeux principaux du projet, son périmètre et les accords réciproques passés avec les commanditaires du projet.
-      La communauté Agile s'est appropriée divers techniques ou formalismes intéressants pour leur capacité à condenser ces informations: par exemple le ["dessin riche"](http://portablelearner.com/half-notes/rich-pictures/) issu de l'approche SSM, le ["diagramme de contexte"](http://yourdon.com/strucanalysis/wiki/index.php?title=Chapter_18#The_Context_Diagram) hérité de l'approche Yourdon pour l'analyse structurée, ou le [A3](http://www.crisp.se/lean/a3-template) du Lean (qui tire précisément son nom du format de papier).
+      L'Ã©quipe rÃ©sume, dans un document trÃ¨s court, idÃ©alement susceptible d'Ãªtre affichÃ© aux murs de [l'espace de travail](teamroom.html) au format d'une feuille de "paperboard", les enjeux principaux du projet, son pÃ©rimÃ¨tre et les accords rÃ©ciproques passÃ©s avec les commanditaires du projet.
+      La communautÃ© Agile s'est appropriÃ©e divers techniques ou formalismes intÃ©ressants pour leur capacitÃ© Ã  condenser ces informations: par exemple le ["dessin riche"](http://portablelearner.com/half-notes/rich-pictures/) issu de l'approche SSM, le ["diagramme de contexte"](http://yourdon.com/strucanalysis/wiki/index.php?title=Chapter_18#The_Context_Diagram) hÃ©ritÃ© de l'approche Yourdon pour l'analyse structurÃ©e, ou le [A3](http://www.crisp.se/lean/a3-template) du Lean (qui tire prÃ©cisÃ©ment son nom du format de papier).
   -
     type: syno
     text: |
@@ -15,16 +15,16 @@ sections:
   -
     type: abus
     text: |
-      * évitez d'utiliser un "modèle de document" pour une charte de projet; l'intérêt de l'exercice consiste à cerner l'information qui, dans le contexte unique de votre projet, permettra à l'équipe de prendre des décisions avisées
-      * une charte de projet ne doit pas dépasser une page en longueur, faute de quoi elle deviendra un nouveau document rébarbatif et rarement lu
+      * Ã©vitez d'utiliser un "modÃ¨le de document" pour une charte de projet; l'intÃ©rÃªt de l'exercice consiste Ã  cerner l'information qui, dans le contexte unique de votre projet, permettra Ã  l'Ã©quipe de prendre des dÃ©cisions avisÃ©es
+      * une charte de projet ne doit pas dÃ©passer une page en longueur, faute de quoi elle deviendra un nouveau document rÃ©barbatif et rarement lu
   -
     type: benefices
     text: |
-      On constate souvent, quand on interroge les membres d'une même équipe, des divergences surprenantes entre leurs réponses à des questions du type: "Quel est l'objectif de ce projet? Quels en sont les aspects les plus importants? Qui cherchez-vous à satisfaire? De quels moyens disposez-vous?"
-      L'établissement d'une charte mais surtout le fait de s'assurer que son contenu soit *connu et approuvé par l'ensemble de l'équipe* donne au projet une unité d'intention qui est un facteur de succès souvent critique.
+      On constate souvent, quand on interroge les membres d'une mÃªme Ã©quipe, des divergences surprenantes entre leurs rÃ©ponses Ã  des questions du type: "Quel est l'objectif de ce projet? Quels en sont les aspects les plus importants? Qui cherchez-vous Ã  satisfaire? De quels moyens disposez-vous?"
+      L'Ã©tablissement d'une charte mais surtout le fait de s'assurer que son contenu soit *connu et approuvÃ© par l'ensemble de l'Ã©quipe* donne au projet une unitÃ© d'intention qui est un facteur de succÃ¨s souvent critique.
   -
     type: histo
     text: |
-      * le contenu idéal d'une charte projet est défini dans un article longtemps resté confidentiel, voire obscur: ["Charters and Charterings, Immunizing your Project Against Foreseeable Failure"](http://www.industriallogic.com/papers/Chartering.pdf) (2001)
-      * l'adoption de cette pratique par la communauté Agile a été lente et graduelle, et sa popularité plus récente s'explique probablement par la volonté de répondre à la critique souvent formulée qu'une approche Agile porte trop peu d'intérêt à la "vue d'ensemble" du projet
+      * le contenu idÃ©al d'une charte projet est dÃ©fini dans un article longtemps restÃ© confidentiel, voire obscur: ["Charters and Charterings, Immunizing your Project Against Foreseeable Failure"](http://www.industriallogic.com/papers/Chartering.pdf) (2001)
+      * l'adoption de cette pratique par la communautÃ© Agile a Ã©tÃ© lente et graduelle, et sa popularitÃ© plus rÃ©cente s'explique probablement par la volontÃ© de rÃ©pondre Ã  la critique souvent formulÃ©e qu'une approche Agile porte trop peu d'intÃ©rÃªt Ã  la "vue d'ensemble" du projet
 ---
