--- a/src/facilitation.yml
+++ b/src/facilitation.yml
@@ -6,6 +6,6 @@ sections:
   -
     type: desc
     text: |
-      Un [facilitateur](http://fr.wikipedia.org/wiki/Facilitateur) est une personne désignée pour animer une réunion. Il ou elle s'interdit généralement de participer au contenu de la réunion, mais se cantonne à créer les conditions dans lesquelles un groupe en réunion pourra parvenir à l'objectif qu'il s'est préalablement fixé.
-      La facilitation est une compétence à part entière, dont les tenants et les aboutissants dépassent largement le cadre des approches Agiles; plutôt que d'en faire ici une description complète, on se réfèrera avec profit aux publications de l'IAF, [International Association of Facilitators](http://www.iaf-world.org/).
+      Un [facilitateur](http://fr.wikipedia.org/wiki/Facilitateur) est une personne dÃ©signÃ©e pour animer une rÃ©union. Il ou elle s'interdit gÃ©nÃ©ralement de participer au contenu de la rÃ©union, mais se cantonne Ã  crÃ©er les conditions dans lesquelles un groupe en rÃ©union pourra parvenir Ã  l'objectif qu'il s'est prÃ©alablement fixÃ©.
+      La facilitation est une compÃ©tence Ã  part entiÃ¨re, dont les tenants et les aboutissants dÃ©passent largement le cadre des approches Agiles; plutÃ´t que d'en faire ici une description complÃ¨te, on se rÃ©fÃ¨rera avec profit aux publications de l'IAF, [International Association of Facilitators](http://www.iaf-world.org/).
 ---
