--- a/src/gwt.yml
+++ b/src/gwt.yml
@@ -6,17 +6,17 @@ sections:
   -
     type: desc
     text: |
-      La matrice Given-When-Then est un format recommandé pour le test fonctionnel d'une User Story:
+      La matrice Given-When-Then est un format recommandÃ© pour le test fonctionnel d'une User Story:
 
-      *  (Given) (Etant donné) un contexte,
+      *  (Given) (Etant donnÃ©) un contexte,
       *  (When) (Lorsque) l'utilisateur effectue certaines actions,
-      *  (Then) (Alors) on doit pouvoir constater telles conséquences
+      *  (Then) (Alors) on doit pouvoir constater telles consÃ©quences
 
       Par exemple:
 
-      *  Etant donné un solde positif de mon compte, et aucun retrait cette semaine,
-      *  Lorsque je retire un montant inférieur à la limite de retrait,
-      *  Alors mon retrait doit se dérouler sans erreur ou avertissement
+      *  Etant donnÃ© un solde positif de mon compte, et aucun retrait cette semaine,
+      *  Lorsque je retire un montant infÃ©rieur Ã  la limite de retrait,
+      *  Alors mon retrait doit se dÃ©rouler sans erreur ou avertissement
 
       Des outils tels que JBehave, RSpec ou Cucumber encouragent l'utilisation de cette formule.
 ---
