--- a/src/retro.yml
+++ b/src/retro.yml
@@ -1,27 +1,27 @@
 ---
-title: Rétrospective jalon
+title: RÃ©trospective jalon
 type: Pratique
 full: yes
 sections:
   -
     type: desc
     text: |
-      A mi-chemin de la durée prévue du projet, ou bien en fin de projet (et surtout lorsque l'équipe prévoit d'être ensuite à nouveau réunie pour un nouveau projet), l'ensemble des membres permanents de l'équipe (au sens large, et pas seulement les développeurs) consacre une voire deux journées entières à un bilan approfondi.
-      Plus encore que lors d'une [rétrospective d'itération](heartbeatretro.html), cette réunion doit être [facilitée](facilitation.html), suivre un format qui peut varier selon les objectifs mais qui sera décidé à l'avance.
+      A mi-chemin de la durÃ©e prÃ©vue du projet, ou bien en fin de projet (et surtout lorsque l'Ã©quipe prÃ©voit d'Ãªtre ensuite Ã  nouveau rÃ©unie pour un nouveau projet), l'ensemble des membres permanents de l'Ã©quipe (au sens large, et pas seulement les dÃ©veloppeurs) consacre une voire deux journÃ©es entiÃ¨res Ã  un bilan approfondi.
+      Plus encore que lors d'une [rÃ©trospective d'itÃ©ration](heartbeatretro.html), cette rÃ©union doit Ãªtre [facilitÃ©e](facilitation.html), suivre un format qui peut varier selon les objectifs mais qui sera dÃ©cidÃ© Ã  l'avance.
   -
     type: syno
     text: |
-      On parle en anglais de "project retrospective" ou "interim retrospective" pour la distinguer de la [rétrospective d'itération](heartbeatretro.html).
+      On parle en anglais de "project retrospective" ou "interim retrospective" pour la distinguer de la [rÃ©trospective d'itÃ©ration](heartbeatretro.html).
   -
     type: abus
     text: |
-      * Il est souvent conseillé de faire appel à un facilitateur extérieur plutôt que de confier ce rôle à un membre de l'équipe: on considère que le facilitateur ne peut pas jouer ce rôle s'il prend également part aux discussions.
-      * Les enjeux d'une rétrospective jalon sont différents et par certains aspects plus importants que ceux d'une rétrospective d'itération; l'accent est mis sur des questions stratégiques, sur le long terme, sur la santé relationnelle de l'équipe, alors qu'une rétrospective d'itération s'intéresse souvent à des questions concrètes et tactiques.
+      * Il est souvent conseillÃ© de faire appel Ã  un facilitateur extÃ©rieur plutÃ´t que de confier ce rÃ´le Ã  un membre de l'Ã©quipe: on considÃ¨re que le facilitateur ne peut pas jouer ce rÃ´le s'il prend Ã©galement part aux discussions.
+      * Les enjeux d'une rÃ©trospective jalon sont diffÃ©rents et par certains aspects plus importants que ceux d'une rÃ©trospective d'itÃ©ration; l'accent est mis sur des questions stratÃ©giques, sur le long terme, sur la santÃ© relationnelle de l'Ã©quipe, alors qu'une rÃ©trospective d'itÃ©ration s'intÃ©resse souvent Ã  des questions concrÃ¨tes et tactiques.
   -
     type: histo
     text: |
-      * le terme "Rétrospectives" est dû au livre de Norm Kerth (cf. ci-dessous) en 2001
-      * la pratique de la rétrospective jalon reste marginale au sein des équipes agiles, qui privilégient le plus souvent les rétrospectives d'itération, populaires à partir de 2006
+      * le terme "RÃ©trospectives" est dÃ» au livre de Norm Kerth (cf. ci-dessous) en 2001
+      * la pratique de la rÃ©trospective jalon reste marginale au sein des Ã©quipes agiles, qui privilÃ©gient le plus souvent les rÃ©trospectives d'itÃ©ration, populaires Ã  partir de 2006
   -
     type: resources
     text: |
